feature: implemented controllers for all entities;

--- a/LovelyReads.API/appsettings.json
+++ b/LovelyReads.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "LovelyReads": "Data Source=localhost,1433;Initial Catalog=lovelyRead;User ID=sa;Password=Docker#2024"
+  },
   "AllowedHosts": "*"
 }
