--- a/LovelyReads.API/appsettings.json
+++ b/LovelyReads.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "LovelyReads": "Data Source=localhost,1433;Initial Catalog=lovelyRead;User ID=sa;Password=Docker#2024"
+    "LovelyReads": "INFORME SUA STRING DE CONEXAO AQUI"
   },
   "AllowedHosts": "*"
 }
