feature: implementing upload of bookCover's files

--- a/LovelyReads.API/LovelyReads.API.csproj
+++ b/LovelyReads.API/LovelyReads.API.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\LovelyReads.Application\LovelyReads.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Storage\" />
+  </ItemGroup>
+
 </Project>
