--- a/LovelyReads.API/LovelyReads.API.csproj
+++ b/LovelyReads.API/LovelyReads.API.csproj
@@ -13,7 +13,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-	<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" /> 
+	<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+	<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.1" /> 
   </ItemGroup>
 
   <ItemGroup>
