--- a/LovelyReads.API/LovelyReads.API.csproj
+++ b/LovelyReads.API/LovelyReads.API.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.33" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.31">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,12 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LovelyReads.Application\LovelyReads.Application.csproj" />
+    <Folder Include="BookStorage\" />
+    <Folder Include="AuthorStorage\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="BookStorage\" />
-    <Folder Include="AuthorStorage\" />
+    <ProjectReference Include="..\LovelyReads.Application\LovelyReads.Application.csproj" />
   </ItemGroup>
 
 </Project>
