wip: implementing unit tests for application layer;

--- a/LovelyReads.UnitTests/LovelyReads.UnitTests.csproj
+++ b/LovelyReads.UnitTests/LovelyReads.UnitTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\" />
+    <Folder Include="Application\Author\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
